# library-api

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  schemas.py  start.sh
database/: Library.sql
models/: author.py  book.py  borrowing.py  catalog.py  genre.py  publisher.py  reader.py  reader_status.py
resources/: author.py  blueprints.py  book.py  borrowing.py  catalog.py  genre.py  publisher.py  reader.py  reader_status.py
